sets color pallete sample

--- a/src/css/site.less
+++ b/src/css/site.less
@@ -1,7 +1,13 @@
+@palette1: #df6e21;
+@palette2: #c5919d;
+@palette3: #e7b183;
+@palette4: #2096ba;
+@palette5: #c5d2db;
+
 html,
 body {
   margin: 0;
-  padding: 20px;
+  padding: 0;
   overflow-x: hidden;
 }
 
@@ -42,4 +48,25 @@ pre {
   background-color: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+.container-palette1 {
+  background-color: @palette1;
+}
+
+.container-palette2 {
+  background-color: @palette2;
+}
+
+.container-palette3 {
+  background-color: @palette3;
+}
+
+.container-palette4 {
+  background-color: @palette4;
+  color: #fff;
+}
+
+.container-palette5 {
+  background-color: @palette5;
 }
